--- a/docs/mgr/CompressionOptimizerCUDA.tex
+++ b/docs/mgr/CompressionOptimizerCUDA.tex
@@ -31,6 +31,9 @@ bindingoffset=10mm, top=25mm, bottom=25mm}
 \newcommand*{\abs}[1]{\left\vert{#1}\right\vert}
 \newcommand*{\om}{\omega}
 
+\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+\usepackage{listings}
+
 \author{Karol Dzitkowski}
 \title{Optymalizator kompresji szeregów czasowych na GPU}
 \begin{document}
@@ -202,6 +205,55 @@ Przedstawiê krótko kodowania u¿yte w implementacji planera kompresji oraz ich mo
 W przeciwieñstwie do innych prac algorytm ten nie zapisuje wyj¹tków wraz z ich pozycjami, i umo¿liwia w ten sposób lepsze ich skompresowanie w dalszych krokach. Zamiast tego trzyma w metadanych zapisany bitowo stempel przynale¿noœci poszczególnych elementów wektora to pierwszej lub drugiej tablicy wynikowej. Rozmiar takich metadanych wynosi $(N+32)$ bitów, gdzie $N$ to liczba kompresowanych elementów.
 \end{description}
 \newpage
+
+\subsection{Global memory coalescing}
+
+
+Tablice zaalokowane w pamiêci urz¹dzenia GPU Nvidia s¹ wyrównane do bloków o wielkoœci 256 bajtów przez sterownik urz¹dzenia. Urz¹dzenie mo¿e dostaæ siê do pamiêci przez 32, 64 lub 128 bajtowe transakcje które s¹ wyrównane do ich wielkoœci. Odczytuj¹c lub zapisuj¹c do pamiêci globalnej, wa¿ne jest zatem aby w¹tki wymaga³y dostêpu zawsze do kolejnych rekordów tablicy, najlepiej wszystkie nale¿¹ce do tego samego \emph{warp}. Aby tak siê sta³o mo¿na zastosowaæ poni¿szy algorytm obliczania indeksów wejœciowych dla danego w¹tku CUDA. \\
+Oznaczmy jako:
+\begin{itemize}
+	\item $\Sigma$ -- iloœæ przetwarzanych elementów
+	\item $\omega$ -- iloœæ w¹tków w grupie
+	\item $\kappa$ -- iloœæ elementów w bloku danych
+	\item $\lambda$ -- iloœæ elementów przetwarzanych przez pojedynczy w¹tek
+	\item $B_{size}$ -- wielkoœæ bloków w¹tków -- (CUDA block size)
+	\item $B_{count}$ -- iloœæ bloków -- (CUDA block count)
+	\item $w_{g}$ -- iloœæ grup w bloku
+	\item $W_{lane}(t) = t_{idx} (mod\ \omega)$ -- indeks w¹tku t w grupie -- (warp lane)
+\end{itemize}
+\noindent
+Za³ó¿my ¿e chcemy przetworzyæ 1MB danych tj. $1024*1024$ elementy, u¿ywaj¹c bloków z 4 grupami po 32 w¹tki ka¿dy, czyli 4 warpy. Ponadto chcemy aby bloki danych mia³y 32 rekordy, a ka¿dy w¹tek przetwarza³ 16 elementów: $\Sigma = 1024*1024$, $\omega = 32$,  $\kappa = 32$, $\lambda = 16$, $w_{g}$ = 4. \\
+Bardzo ³atwo mo¿na obliczyæ ile wynosi rozmiar pojedynczego bloku $B_{size}$, oraz iloœæ wszystkich bloków, potrzebnych do przetworzenia wszystkich elementów wektora wejœciowego $B_{count}$:
+$$B_{size} = \omega * w_{g} $$,
+$$ B_{count} = \frac{\Sigma + B_{size}*\lambda - 1}{B_{size}*\lambda} $$
+
+Przyjmuj¹c pocz¹tkowy indeks bloków danych dla w¹tku $t$ o indeksie $t_{idx}(t)$ z bloku $b_{idx}(t)$ za $\Psi(t) = (t_{idx}(t) - W_{lane}(t)) * \lambda / 32$, indeks bloku danych dla danego w¹tku mo¿na obliczyæ za pomoc¹ wzoru:
+$$ d_{b}(t) = b_{idx}(t) * w_{g} * \lambda + \Psi(t) $$
+co dla naszego przyk³adu obrazuje rysunek \ref{ref:cuda_data_blocks}.
+\begin{figure}[h!]
+	\centering
+	\hspace*{-0.5cm}\includegraphics[scale=0.55]{img/cuda_data_blocks}
+	\caption{Przejœcie z u³o¿enia w¹tków w bloku na bloki danych}
+	\label{ref:cuda_data_blocks}
+\end{figure}
+
+Ka¿dej grupie w bloku CUDA odpowiada tyle samo bloków danych, przy czym bloki danych s¹ wielkoœci $\kappa$ elementów i ich numery s¹ potrzebne do obliczenia pocz¹tkowego indeksu wejœciowego dla w¹tku, który definiujemy jako $$ \mu_{0}(t) = d_{b}(t)*\kappa + W_{lane}(t) $$
+Kolejne indeksy wyliczane s¹ jako przesuniêcia o $\omega$, czyli 
+$ \mu_{k}(t) = \mu_{0}(t) + k * \omega $, dla $ k \in [1,\kappa-1] $. 
+Tworzy to podzia³ danych wejœciowych, który zgodnie z przyk³adem obrazuje rysunek \ref{ref:cuda_data_blocks2}. 
+
+\begin{figure}[h!]
+	\centering
+	\hspace*{-0.5cm}\includegraphics[scale=0.55]{img/cuda_data_blocks2}
+	\caption{Indeksy danych wejœciowych}
+	\label{ref:cuda_data_blocks2}
+\end{figure}
+
+Dziêki takiemu u³o¿eniu kolejne w¹tki z tego samego warp, wykonuj¹ odczyt kolejnych rekordów z tablicy Ÿród³owej, poniewa¿ w¹tek 0 odczytuje rekord 0, w¹tek 1 rekord 1, a¿ wreszcie w¹tek $\omega$ rekord $\omega$, nastêpnie po przesuniêciu o $\omega$ w¹tki ponownie odczytuj¹ dane, które s¹ ze sob¹ s¹siaduj¹ce. Dziêki temu odczyt mo¿e byæ po³¹czony (Global Memory Coalescing\cite{UENG}). £¹czny odczyt mo¿e byæ wielokrotnie szybszy, ni¿ odczyty z nie kolejnych indeksów, co jest kluczowe przy budowie bardzo wydajnych algorytmów przetwarzaj¹cych dane na GPU.
+W przypadku CUDA grupa powinna mieæ licznoœæ 32, co odpowiada iloœci w¹tków w jednym \emph{warp}.
+
+\newpage
+
 \subsection{Algorytmy kompresji szeregów}
 \begin{description}
 \item[RLE] -- kodowanie d³ugoœci serii (Run-Length-Encoding) to sposób kompresji polegaj¹cy na zapisie ci¹gów takich samych wartoœci, jako wartoœæ i d³ugoœæ tego ci¹gu. W tym przypadku obie te wartoœci trafiaj¹ do 2 ró¿nych tablic, które nastêpnie mog¹ byæ kompresowane osobno. Szczególnie dobrze sprawdza siê w przypadku posortowanych danych, lub czêsto siê powtarzaj¹cych. Dla przyk³adu wektor ${5,5,5,5,1,1,1,1,17,17,17,17}$ zostanie skompresowany do ${5,1,17}$ oraz ${4,4,4}$. Data technika kompresji jest op³acalna jeœli œrednia d³ugoœæ ci¹gów przekracza 2 ($D_{sr} > 2$). \\ Dana metoda zosta³a zaimplementowana z u¿yciem biblioteki Thrust, stosuj¹c miêdzy innymi metodê \emph{reduce\_by\_key}.
@@ -215,36 +267,8 @@ Ten rodzaj kodowania nazywany jest kodowaniem o sta³ej d³ugoœci z wyrównaniem. O
 \item Obliczana jest najmniejsza liczba bitów potrzebna do zakodowania wszystkich s³ów w wektorze, nazwijmy go $W$ i oznaczmy liczbê bitów jako $\sigma$:
 $$ \sigma = log_{2}(max(W)) + 1 $$
 \item Nastêpnie wektor elementów jest dope³niany, aby jego d³ugoœæ by³a wielokrotnoœci¹ 1024, a liczba dope³nionych elementów wraz z potrzebn¹ do zapisania liczb liczb¹ bitów $\sigma$ zapisywana jest do metadanych.
-\item Dla ka¿dego w¹tku $t$ CUDA ozn. \emph{$t=thread(b_{idx},t_{idx})$}, co oznacza w¹tek o indeksie $t_{idx}$ z bloku $b_{idx}$, wyznaczany jest pocz¹tkowy indeks danych wejœciowych i wyjœciowych dla tego w¹tku. Aby wyjaœniæ jak mo¿na je wyznaczyæ wprowadŸmy nastêpuj¹ce oznaczenia:  
-
-\begin{itemize}
-	\item $\omega$ -- iloœæ w¹tków w grupie (w naszym przypadku jest to licznoœæ w¹tków w warpie, czyli 32) -- (warp size)
-	\item $\kappa$ -- iloœæ bitów w s³owie (32 bity)
-	\item $B_{size}$ -- wielkoœæ bloków w¹tków -- (CUDA block size)
-	\item $B_{count}$ -- iloœæ bloków potrzebna do zakodowania wszystkich elementów wektora $W$ -- (CUDA block count)
-	\item $W_{lane}(t) = t_{idx} (mod\ \omega)$ -- indeks w¹tku t w grupie -- (warp lane)
-	\item $\Psi(t) = t_{idx} - W_{lane}(t)$ -- index pierwszego w¹tku w grupie
-\end{itemize}
-Wtedy indeks bloku danych dla danego w¹tku mo¿na obliczyæ za pomoc¹ wzoru $ d_{b}(t) = b_{idx} * B_{size} + \Psi(t) $ co obrazuje rysunek \ref{ref:afl1}. Wielkoœæ bloków w¹tków ustalmy na $ B_{size} = 32 * 8 $ co sprawi, ¿e ka¿dy blok bêdzie siê sk³ada³ z 8 warpów.
-
-
-
-\begin{figure}[h!]
-	\centering
-	\hspace*{-0.5cm}\includegraphics[scale=0.55]{img/AFL}
-	\caption{AFL - przejœcie z u³o¿enia w¹tków w bloku na bloki danych}
-	\label{ref:afl1}
-\end{figure}
-
-Jak mo¿na zauwa¿yæ, ka¿demu warpowi w bloku odpowiada tyle samo bloków danych, przy czym bloki danych s¹ wielkoœci $\kappa$ elementów i ich numery s¹ potrzebne do obliczenia pocz¹tkowego indeksu wejœciowego dla w¹tku, który definiujemy jako $ \mu_{0}(t) = d_{b}(t)*\kappa + W_{lane}(t) $, gdzie kolejne indeksy wyliczane s¹ jako przesuniêcia o $\omega$, czyli $ \mu_{k}(t) = \mu_{0}(t) + k * \omega $, gdzie $ k \in [1,\kappa-1] $. Tworzy to podzia³ danych wejœciowych, który obrazuje \ref{ref:afl3}. Dziêki takiemu u³o¿eniu kolejne w¹tki z tego samego warp, wykonuj¹ odczyt kolejnych rekordów z tablicy Ÿród³owej, poniewa¿ w¹tek 0 odczytuje rekord 0, w¹tek 1 rekord 1, a¿ wreszcie w¹tek 31 rekord 31. Dziêki temu odczyt mo¿e byæ po³¹czony (Global Memory Coalescing\cite{UENG}).
-	
-\begin{figure}[h!]
-	\centering
-	\hspace*{-0.5cm}\includegraphics[scale=0.55]{img/AFL3}
-	\caption{AFL - Indeksy danych wejœciowych}
-	\label{ref:afl3}
-\end{figure}
-
+\item Dla ka¿dego w¹tku $t$ CUDA ozn. \emph{$t=thread(b_{idx},t_{idx})$}, co oznacza w¹tek o indeksie $t_{idx}$ z bloku $b_{idx}$, wyznaczany jest pocz¹tkowy indeks danych wejœciowych i wyjœciowych dla tego w¹tku, zgodnie z algorytmem przedstawionym w poprzedniej sekcji. 
+Wielkoœæ bloków w¹tków ustalmy na $ B_{size} = 32 * 8 $ co sprawi, ¿e ka¿dy blok bêdzie siê sk³ada³ z 8 warpów, a grupy bêd¹ mia³y licznoœæ 32 ($\omega = 32$, $w_{g} = 8$). Ponadto chcemy aby bloki danych by³y wielkoœci 32 elementów ($\kappa = 32$).
 Maj¹c dane wejœciowe o indeksach $ {\mu_{0}, \mu_{1}, ..., \mu_{\kappa-1}} $ w¹tek zapisuje $\sigma$ dolnych bitów ka¿dej z liczb spod tych indeksów, do rekordów tablicy wynikowej. Wielkoœci bloków s¹ tak dobrane, aby ka¿dy w¹tek kodowa³ $\kappa$ liczb u¿ywaj¹c $\sigma$ bitów i otrzymuj¹c w ten sposób $\sigma$ liczb o wielkoœci $\kappa$. Za³ó¿my, ¿e $\kappa = 8$ oraz $\sigma = 3$, wtedy \ref{ref:afl4} obrazuje u³o¿enie danych wejœciowych o wielkoœci 8 bitów, skompresowanych do wielkoœci 3 bitów w wektorze wynikowym, przyjmuj¹c 16 iloœæ w¹tków w grupie ($\omega = 16$). Jak widaæ skompresowane dane idealnie mieszcz¹ siê w 3 rekordach tablicy wynikowej.
 
 \begin{figure}[h!]
@@ -255,15 +279,54 @@ Maj¹c dane wejœciowe o indeksach $ {\mu_{0}, \mu_{1}, ..., \mu_{\kappa-1}} $ w¹t
 \end{figure}
 
 Pocz¹tkowy indeks tablicy wynikowej pod który w¹tek ma zapisaæ skompresowane dane, wyliczane s¹ jako $ \nu_{0}(t) = d_{b}(t) * \sigma + W_{lane}(t) $. Do rekordu zapisywanych jest mo¿liwie najwiêcej bitów (tak jak pokazuje \ref{ref:afl4}), po czym jeœli brak³o miejsca dalsze bity przenoszone s¹ do nastêpnego rekordu, którego indeks wyliczany jest jako $ \nu_{k}(t) = \nu_{0}(t) + k * \omega $, gdzie $ k \in [1,\sigma-1] $. Tutaj równie¿ w¹tki pos³uguj¹ siê ³¹cznym dostêpem do pamiêci.
-\item Po skompresowaniu, dane powinny mieæ dok³adnie $\sigma * len(W)$ bitów d³ugoœci, nie licz¹c metadanych które mo¿na zapisaæ w dwóch bajtach. 
+\item Po skompresowaniu, dane powinny mieæ dok³adnie $\sigma * \Sigma$ bitów d³ugoœci, nie licz¹c metadanych które mo¿na zapisaæ w dwóch bajtach. 
 
 \end{enumerate}
 
 Tak zaimplementowany algorytm okazuje siê byæ oko³o dziesiêciokrotnie szybszy od tradycyjnej implementacji Fixed-Length encoding na CUDA, który jest równowa¿ny tej kompresji z $\omega = 1$. 
 
 \subsubsection{GFC}
+GFC to zaproponowana przez Burtscher et al.\cite{ONEIL} modyfikacja algorytmu pFPC kompresji liczb zmiennoprzecinkowych o podwójnej precyzji, który jest równoleg³¹ wersj¹ algorytmu FPC zaimplementowan¹ na procesory graficzne. Zamiast operacji XOR na prawdziwej i przewidzianej wartoœci kompresowanej liczby, metoda ta u¿ywa zwyk³ego odejmowania i dodatkowo zapamiêtuje znak, a kompresuje wartoœæ absolutn¹ tej ró¿nicy. Algorytm ten równie¿ jest wyrównany u¿ywaj¹c ³¹czny dostêp do pamiêci, za to w przeciwieñstwie do algorytmu AFL nie wymaga aby iloœæ kompresowanych liczb przez pojedynczy w¹tek by³a podzielna przez 32. Mo¿e byæ to na przyk³ad 15. Blok danych bêdzie mia³ ponownie 32 wartoœci, poniewa¿ ka¿dy \emph{warp} musi przetworzyæ 32 wartoœci, aby uzyskaæ $\sigma$ liczb wynikowych. W tym algorytmie liczba $\sigma$ jest wyznaczana na bie¿¹co dla ka¿dej liczby osobno i wyra¿ona jest w bajtach. Opiszê tutaj wersjê algorytmu dla liczb o pojedynczej precyzji (32-bit) typu np. float. Zatem $\sigma$ mo¿e przybieraæ wartoœci 1, 2, 3 lub 4 i mo¿na zapisaæ j¹ na 2 bajtach. Iloœæ bajtów na których zostanie zapisana liczba x mo¿e byæ wyra¿ona w uproszczeniu jako: $ \sigma(x) = log_{2}(x)/8 + 1 $. Poni¿ej zamieszczam prosty pseudokod algorytmu wykonywanego przez ka¿dy w¹tek w kernelu CUDA:
+\begin{algorithm}[H]
+ \caption{Pseudokod algorytmu kompresji GFC dla w¹tku t}
+ \tcc{WEJŒCIE: $data$ - wektor do skompresowania}
+ \tcc{WYJŒCIE: $compr$ - skompr. dane, $offsets$ - rozm. paczek}
+ $last$ = 0, $i$ = 0\;
+ \While{$i < \lambda$}{ 
+  $diff$ = $data[\mu_{i}(t)]$ - $last$\;
+  $sign$ = bit znaku liczby $diff$\;
+  $diff = abs(diff)$\;
+  $minByte = \sigma(diff)$\;
+  $size$ = wykonaj sumê prefixow¹ na minByte w warpie\;
+  $save(compr, diff, minByte)$ \tcp*{zapisz $minByte$ bajtów liczby $diff$ do tablicy wynikowej}
+  $saveMeta(compr, minByte, sign)$ \tcp*{zapisz minByte oraz sign do tablicy wynikowej}
+  $off = off + size + 16$\;
+  $beg = beg + 32$\; 
+  $last = data[beg-1]$\;
+ }	
+ \If{$warp_{idx} == 31$}{$offsets[warp] = off$\;}
+ \label{ref:alg_gfc}
+\end{algorithm}
+\newpage
+\noindent
+Poszczególne \emph{warp-y} pracuj¹ oddzielnie, kompresuj¹c dane do osobnych paczek. Dane z ca³ego \emph{warp} pakowane s¹ w jedno miejsce, pocz¹wszy od wyliczonego wczeœniej przesuniêcia. W ka¿dej iteracji, \emph{warp} pakuje 32 liczby tworz¹c z nich podpaczkê, poprzedzon¹ ma³ym nag³ówkiem zawieraj¹cym informacje o znakach i liczbie bitów na których jest zapisana ka¿da liczba. Rozmiar tych informacji to 4 bity, wiêc dane w pesymistycznym wypadku mog¹ rozrosn¹æ siê o $l_{w}/2$ bajtów. Podpaczki zapisywane s¹ jedna za drug¹. Poniewa¿ rozmiar skompresowanej paczki nie jest znany w momencie uruchomienia algorytmu, potrzebna jest osobna tablica wynikowa, w której przechowywane s¹ wynikowe wielkoœci paczek. Ponadto trzeba zaalokowaæ tablicê wynikow¹ o wielkoœci
+$ c_{s} = (l_{W} + 1)*\frac{9}{2} $ bajtów miejsca. 
+
+\begin{figure}[h!]
+	\centering
+	\hspace*{-0.5cm}\includegraphics[scale=0.75]{img/gfc}
+	\caption{wynik dzia³ania algorytmu GFC - tablica wyjœciowa}
+	\label{ref:gfc}
+\end{figure}
+
+Kompresja znacz¹co ró¿ni siê od AFL pomimo podobnego podzia³u na bloki danych. Iloœæ stworzonych paczek danych przez ten algorytm wynosi - $ p_{n} = w_{g} * B_{n} $. Paczki skompresowane przez poszczególne \emph{warp-y} nie przylegaj¹ do siebie, co widaæ na rysunku \ref{ref:gfc}, przez to minusem tej metody jest to, ¿e po kompresji nale¿y przekopiowaæ wszystkie $p_{n}$ paczek, o ró¿nych rozmiarach do tablicy wynikowej. Kopiowanie to jest odpowiednio szybkie dla ma³ej iloœci paczek o wiêkszych rozmiarach. Wtedy zachodzi zale¿noœæ, ¿e kiedy $p_{n}$ roœnie wydajnoœæ kopiowania maleje, natomiast wydajnoœæ samego algorytmu wzrasta. Jeœli zmniejszymy $p_{n}$ automatycznie musimy zwiêkszyæ $\lambda$, bo $B_{n}$ zale¿y odwrotnie proporcjonalnie od $\lambda$, a im wiêksze $\lambda$, tym wolniejszy jest sam algorytm (pojedyncze w¹tki wykonuj¹ wiêcej pracy).
+Warto sprawdziæ zatem, czy napisanie dedykowanego algorytmu kopiowania (jako kernel CUDA), mo¿e przyspieszyæ takie kopiowania danych na GPU, wzglêdem tradycyjnych wywo³añ \emph{cudaMemcpy} w pêtli. Próby zrównoleglenia tych kopiowañ na ró¿nych \emph{stream-ach} na mojej karcie graficznej (GeForce GT 640) skoñczy³y siê gorsz¹ wydajnoœci¹ ni¿ seria kopiowañ na \emph{stream 0}.
+
 
 \section{Biblioteki}
+
+Projekt sk³ada siê z 4 bibliotek, których zale¿noœci wewnêtrzne pokazane s¹ na rysunku \ref{ref:libs}. Ponadto biblioteki \emph{CORE} oraz \emph{ENC} wykorzystuj¹ technologiê CUDA i musz¹ byæ kompilowane za pomoc¹ \emph{nvcc}. Wszystkie biblioteki korzystaj¹ z biblioteki \emph{Boost} oraz bibliotek do testowania i benchmarków (\emph{GTEST}, \emph{Google Benchmark}). 
+Poni¿ej znajduje siê tak¿e opis poszczególnych bibliotek. 
 
 	\begin{figure}[h!]
 		\centering
@@ -273,11 +336,30 @@ Tak zaimplementowany algorytm okazuje siê byæ oko³o dziesiêciokrotnie szybszy od
 	\end{figure}
 
 \subsection{TS}
+Jest to biblioteka definiuj¹ca strukturê szeregu czasowego, oraz udostêpniaj¹ca metody do odczytu i zapisu szeregów z plików binarnych oraz tekstowych o kolumnach rozdzielonych separatorem, na przyk³ad CSV. Ponadto umo¿liwia definicjê szeregu czasowego poprzez plik nag³ówkowy o strukturze wierszy: ([nazwa kolumny],[typ kolumny],[precyzja]), w której ka¿dy wiersz definiuje osobn¹ kolumnê. Przyk³ad:
+\begin{lstlisting}[caption=Przyk³adowy plik opisu szeregu czasowego,label={lst:tsheader}]
+		timestamp,time,0
+		CORE VOLTAGE,float,6
+		CPU TEMP,float,6
+		GPU TEMP,float,6
+\end{lstlisting}
 \subsection{CORE}
+Tutaj zaimplementowane s¹ wszystkie podstawowe rzeczy takie jak logowanie, konfiguracja, inteligentny wskaŸnik na pamiêæ CUDA (zaimplementowany w oparciu o \emph{Shared Pointer} z biblioteki \emph{Boost}), operacje na wektorach danych po stronie GPU takie jak histogramy, wyliczanie statystyk itp., a tak¿e bazowe klasy testów i benchmarków wraz z generatorem danych.
 \subsection{ENC}
+Encodings to biblioteka mieszcz¹ce wszystkie zaimplementowane w ramach tego projektu algorytmy kodowania i transformacji zaimplementowane na CUDA, potrafi¹ce kodowaæ i dekodowaæ dane wszystkich typów obs³ugiwanych przez ten system (\emph{char, short, int, unsigned int, long, float, double}).
 \subsection{OPT}
-
+W³aœciwa biblioteka dla tego projektu mieszcz¹ca optymalizator kompresji, a tak¿e definicjê i implementacjê drzewa kompresji, jak równie¿ drzewa optymalnego (drzewa aktualnie u¿ywanego przez kompresor, które umo¿liwia pewne mutowanie tego drzewa, co zostanie opisane w nastêpnym rozdziale).
 \section{Program}
+Program wynikowy jest przyk³adowym programem wynikowym, który u¿ywaj¹c optymalizatora kompresji, wielow¹tkowo i równolegle kompresuje wiele kolumn szeregu czasowego podanego jako plik wejœciowy. Plik wejœciowy jest zaczytywany paczkami i w tym samym czasie czêœci ju¿ skompresowane mog¹ byæ zapisywane do podanego pliku wyjœciowego. Dok³adny opis tego algorytmu znajduje siê na koñcu rozdzia³u 3. Argumenty programu:
+\begin{itemize}
+\item \emph{--compress} lub \emph{-c}: opcja kompresji (nast¹pi kompresja pliku wejœciowego)
+\item \emph{--decompress} lub \emph{-d}: opcja dekompresji (nast¹pi dekompresja pliku wejœciowego)
+\item \emph{--header} lub \emph{-h} \emph{[<œcie¿ka>]}: podanie œcie¿ki do pliku zawieraj¹cego opis szeregu jak wy¿ej \ref{lst:tsheader}.
+\item \emph{--input} lub \emph{-i} \emph{[<œcie¿ka>]}: podanie œcie¿ki do pliku wejœciowego
+\item \emph{--output} lub \emph{-o} \emph{[<œcie¿ka>]}: podanie œcie¿ki do pliku wyjœciowego
+\item \emph{--generate} lub \emph{-g}: -- wygeneruj przyk³adowe pliki danych
+\item \emph{--padding} lub \emph{-p} \emph{[<ró¿nica>]}: w przypadku gdy wiersze szeregu w pliku binarnym s¹ wyrównane do jakieœ wielkoœci, podajemy w ten sposób ró¿nicê wzglêdem ich rzeczywistej wielkoœci, np. jeœli dane zajmuj¹ 12 bajtów a s¹ wyrównane do 16, powinniœmy uruchomiæ program z opcj¹ \emph{-p 4}.
+\end{itemize}
 
 \chapter{Optymalizator kompresji}
 
@@ -332,7 +414,8 @@ Tak zaimplementowany algorytm okazuje siê byæ oko³o dziesiêciokrotnie szybszy od
 \bibitem[39]{GOLDSTEIN} Goldstein, Jonathan, Raghu Ramakrishnan, and Uri Shaft. \emph{"Compressing relations and indexes."} Data Engineering, 1998. Proceedings., 14th International Conference on. IEEE, 1998.
 \bibitem[41]{CUDA_PERF} http://developer.download.nvidia.com/compute/cuda/compute-docs/cuda-performance-report.pdf
 \bibitem[42]{PARETO} Marler, R. Timothy, and Jasbir S. Arora. \emph{"Survey of multi-objective optimization methods for engineering."} Structural and multidisciplinary optimization 26.6 (2004): 369-395.
-\bibitem[43]{UENG} Ueng, Sain-Zee, et al. "CUDA-lite: Reducing GPU programming complexity." Languages and Compilers for Parallel Computing. Springer Berlin Heidelberg, 2008. 1-15.
+\bibitem[43]{UENG} Ueng, Sain-Zee, et al. \emph{"CUDA-lite: Reducing GPU programming complexity."} Languages and Compilers for Parallel Computing. Springer Berlin Heidelberg, 2008. 1-15.
+\bibitem[44]{FPC} Burtscher, Martin, and Paruj Ratanaworabhan. \emph{"pFPC: A parallel compressor for floating-point data."} Data Compression Conference, 2009. DCC'09.. IEEE, 2009.
 
 \end{thebibliography}
 \tableofcontents
